@@ -1,5 +1,6 @@
 +++ version 1.1
 * tabs: #2867 fixed: open in new window/tab works properly (Vogel)
+* jabber: #2861 fixed: double messages removed (Vogel)
 
 +++ version 1.0
 * core: #2854 fixed: properly handle e-mail application (Vogel)
